
1.2b1
- Fixed glitches and a potential crash source in Alsa player.
- Code cleanup in Alsa player.

=====================================================================================
Version 1.1 new features highlight
* Fixed countless crashes, bugs and glitches
* Added new score editor
* New undo system, that is both faster, work in controller editor and allows for multiple undo
* Added italian translation
* Major code cleanup and refactoring
* Removed useless stuff from .aria files, making them significantly smaller
* Linux port improved by leaps and bounds, slowly getting more stable
* Major improvements to build system
* Improved document icon
* Added mouse wheels support to vertically scroll tracks
* Made document saving data loss-safe : if your computer crashes or is powered up while an aria file is being saved, no data loss will occurs
======================================================================================

1.1
- Fixed behaviour when closing last document
- Fixed undoing vertical moves in score, when there's accidentals
- Fixed incorrect display of triplets in complex songs
- Fixed incorrect note beaming when making notes of different lengths play at the same time
- Improved handling of whole notes playing along chords
- Improved handling of ties with chords
- Fixed many cases of incorrect silence rendering

 1.1b8
- Hopefully fixed compatiblity problems with intel Tiger systems
- Fixed crash when importing invalid midis
- More improvements to scons build system
- Fixed undoing shift+up/down in score editor
- Made saving aria files safe : your file is not deleted until the new one is successfully written
- Switched some small variables from int to short
 
 1.1b7
- Improved setting notes sharp/flat/natural to be easier and more flexible
- Made accidentals last entire measure
- Improved note splitting to be wiser
- Made note beaming wiser about how it selects which notes to beam together